--- a/Values.yaml
+++ b/Values.yaml
@@ -1,28 +1,76 @@
-kafka:
-  replicaCount: 1
-  zookeeper:
-    replicaCount: 1
-  provisioning:
-    topics:
-      - name: topic1
-        partitions: 2
-        replicationFactor: 1
-        config:
-          max.message.bytes: 64000
-          flush.messages: 1
-  metrics:
-    kafka:
-      enabled: true
-  externalAccess:
-    enabled: true
-    service:
-      type: NodePort
-      nodePorts:
-        - 30123
 
-# elasticsearch:
-#   master:
-#     replicaCount: 2
+
+# kafka:
+#   replicaCount: 1
+  # zookeeper:
+  #   replicaCount: 1
+#   provisioning:
+#     topics:
+#       - name: topic1
+#         partitions: 2
+#         replicationFactor: 1
+  #       config:
+  #         max.message.bytes: 64000
+  #         flush.messages: 1
+  # metrics:
+  #   kafka:
+  #     enabled: true
+  # externalAccess:
+  #   enabled: true
+  #   service:
+  #     type: NodePort
+  #     nodePorts:
+  #       - 30123
+
+replicaCount: 1
+configMapDir: {}
+
+image:
+  repository: kafka:latest
+  version: 0.0.1
+  pullPolicy: IfNotPresent
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: false
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name:
+
+podSecurityContext: {}
+  # fsGroup: 2000
+
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
+
+# service:
+#   type: NodePort
+#   port: 80
+
+
+resources: {}
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
+elasticsearch:
+  master:
+    replicas: 2
+  namespaceOverride: elasticsearch
+
+
 
 # prometheus:
 #   kafka:
