--- a/templates/elasticsearch.yaml
+++ b/templates/elasticsearch.yaml
@@ -204,7 +204,7 @@ spec:
         app: elasticsearch
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: standard
+      storageClassName: gp2
       resources:
         requests:
           storage: 10Gi
